--- a/starter-code/index.scss
+++ b/starter-code/index.scss
@@ -322,11 +322,13 @@ select {
 .logo {
 	margin: 1.5rem clamp(1.5rem, 5vw, 3.5rem);
 }
+
 .primary-header {
 	justify-content: space-between;
 	align-items: center;
 }
 .primarynavigation {
+	--gap: clamp(2rem, 5vw, 3rem);
 	--underline-gap: 2rem;
 	list-style: none;
 	padding: 0;
@@ -334,12 +336,21 @@ select {
 	background: hslac($clr-white, 0.1);
 	backdrop-filter: blur(1rem);
 }
+.primarynavigation a {
+	text-decoration: none;
+	text-align: center;
+}
+
+.primarynavigation a > span {
+	margin-right: 0.6em;
+	font-weight: 700;
+}
 
 .mobile-toggler {
 	display: none;
 }
 
-@media (max-width: 35rem) {
+@media (max-width: 35em) {
 	.primarynavigation {
 		--underline-gap: 0.5rem;
 		list-style: none;
@@ -349,9 +360,15 @@ select {
 		padding: 5rem 2rem;
 		margin: 0;
 		flex-direction: column;
-		z-index: 2;
 		transform: translateX(100%);
 		transition: transform 500ms ease-in-out;
+	}
+
+	.primarynavigation[data-visible="true"] {
+		transform: translateX(0);
+	}
+	.primary-navigation.underline-indicators > .active {
+		border: 0;
 	}
 
 	.mobile-toggler {
@@ -369,9 +386,6 @@ select {
 		border: 0;
 	}
 
-	.primarynavigation[data-visible="true"] {
-		transform: translateX(0);
-	}
 	.mobile-toggler[aria-expanded="true"] {
 		background-image: url(../starter-code/assets/shared/icon-close.svg);
 		background-repeat: no-repeat;
@@ -380,23 +394,50 @@ select {
 		outline-offset: 5px;
 	}
 }
-.primarynavigation a {
-	text-decoration: none;
-}
-.primarynavigation.underline-indicators > .active {
-	border: 0;
+
+@media (min-width: 35em) {
+	.primarynavigation {
+		padding-inline: clamp(3rem, 7vw, 7rem);
+	}
 }
 
-.primarynavigation a > span {
-	margin-right: 0.5em;
-	font-weight: 700;
+@media (min-width: 35em) and (max-width: 44.999em) {
+	.primarynavigation a > span {
+		display: none;
+	}
+}
+
+@media (min-width: 45em) {
+	.primary-header::after {
+		content: "";
+		display: block;
+		position: relative;
+		height: 1px;
+		width: 100%;
+		margin-right: -2.5rem;
+		background: hslac($clr-white, 0.25);
+		order: 1;
+	}
+
+	nav {
+		order: 2;
+	}
+
+	.primarynavigation {
+		margin-block: 2rem;
+	}
+	.primarynavigation > *:first-child {
+		width: 120px;
+		display: flex;
+		justify-content: center;
+	}
 }
 
 .underline-indicators > * {
 	cursor: pointer;
 	border: 0;
 	border-bottom: 0.2rem solid hslac($clr-white, 0);
-	padding: var(--underline-gap, 1rem) 0;
+	padding: var(--underline-gap, 1.5rem) 0;
 }
 .underline-indicators > *:hover,
 .underline-indicators > *:focus {
@@ -438,15 +479,69 @@ body {
 	background-image: url("../starter-code/assets/home/background-home-mobile.jpg");
 }
 
-@media (min-width: 35rem) {
+@media (min-width: 35em) {
 	.home {
 		background-position: center center;
 		background-image: url("../starter-code/assets/home/background-home-tablet.jpg");
 	}
 }
 
-@media (min-width: 45rem) {
+@media (min-width: 45em) {
 	.home {
 		background-image: url("../starter-code/assets/home/background-home-desktop.jpg");
+	}
+}
+
+/* destination */
+.destination {
+	background-image: url("../starter-code/assets/destination/background-destination-mobile.jpg");
+}
+
+@media (min-width: 35em) {
+	.destination {
+		background-position: center center;
+		background-image: url("../starter-code/assets/destination/background-destination-tablet.jpg");
+	}
+}
+
+@media (min-width: 45em) {
+	.destination {
+		background-image: url("../starter-code/assets/destination/background-destination-desktop.jpg");
+	}
+}
+
+/* crew */
+.crew {
+	background-image: url("../starter-code/assets/home/background-crew-mobile.jpg");
+}
+
+@media (min-width: 35em) {
+	.crew {
+		background-position: center center;
+		background-image: url("../starter-code/assets/crew/background-crew-tablet.jpg");
+	}
+}
+
+@media (min-width: 45em) {
+	.crew {
+		background-image: url("../starter-code/assets/crew/background-crew-desktop.jpg");
+	}
+}
+
+/*technology*/
+.technology {
+	background-image: url("../starter-code/assets/home/background-technology-mobile.jpg");
+}
+
+@media (min-width: 35em) {
+	.technology {
+		background-position: center center;
+		background-image: url("../starter-code/assets/technology/background-technology-tablet.jpg");
+	}
+}
+
+@media (min-width: 45em) {
+	.technology {
+		background-image: url("../starter-code/assets/technology/background-technology-desktop.jpg");
 	}
 }
