--- a/styles/index.css
+++ b/styles/index.css
@@ -325,6 +325,7 @@ select {
 }
 
 .primarynavigation {
+  --gap: clamp(2rem, 5vw, 3rem);
   --underline-gap: 2rem;
   list-style: none;
   padding: 0;
@@ -334,11 +335,21 @@ select {
           backdrop-filter: blur(1rem);
 }
 
+.primarynavigation a {
+  text-decoration: none;
+  text-align: center;
+}
+
+.primarynavigation a > span {
+  margin-right: 0.6em;
+  font-weight: 700;
+}
+
 .mobile-toggler {
   display: none;
 }
 
-@media (max-width: 35rem) {
+@media (max-width: 35em) {
   .primarynavigation {
     --underline-gap: 0.5rem;
     list-style: none;
@@ -351,13 +362,19 @@ select {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    z-index: 2;
     -webkit-transform: translateX(100%);
             transform: translateX(100%);
     -webkit-transition: -webkit-transform 500ms ease-in-out;
     transition: -webkit-transform 500ms ease-in-out;
     transition: transform 500ms ease-in-out;
     transition: transform 500ms ease-in-out, -webkit-transform 500ms ease-in-out;
+  }
+  .primarynavigation[data-visible="true"] {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  .primary-navigation.underline-indicators > .active {
+    border: 0;
   }
   .mobile-toggler {
     display: block;
@@ -373,10 +390,6 @@ select {
     aspect-ratio: 1;
     border: 0;
   }
-  .primarynavigation[data-visible="true"] {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-  }
   .mobile-toggler[aria-expanded="true"] {
     background-image: url(../starter-code/assets/shared/icon-close.svg);
     background-repeat: no-repeat;
@@ -386,24 +399,55 @@ select {
   }
 }
 
-.primarynavigation a {
-  text-decoration: none;
+@media (min-width: 35em) {
+  .primarynavigation {
+    padding-inline: clamp(3rem, 7vw, 7rem);
+  }
 }
 
-.primarynavigation.underline-indicators > .active {
-  border: 0;
+@media (min-width: 35em) and (max-width: 44.999em) {
+  .primarynavigation a > span {
+    display: none;
+  }
 }
 
-.primarynavigation a > span {
-  margin-right: 0.5em;
-  font-weight: 700;
+@media (min-width: 45em) {
+  .primary-header::after {
+    content: "";
+    display: block;
+    position: relative;
+    height: 1px;
+    width: 100%;
+    margin-right: -2.5rem;
+    background: rgba(255, 255, 255, 0.25);
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  nav {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .primarynavigation {
+    margin-block: 2rem;
+  }
+  .primarynavigation > *:first-child {
+    width: 120px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .underline-indicators > * {
   cursor: pointer;
   border: 0;
   border-bottom: 0.2rem solid rgba(255, 255, 255, 0);
-  padding: var(--underline-gap, 1rem) 0;
+  padding: var(--underline-gap, 1.5rem) 0;
 }
 
 .underline-indicators > *:hover,
@@ -446,16 +490,70 @@ body {
   background-image: url("../starter-code/assets/home/background-home-mobile.jpg");
 }
 
-@media (min-width: 35rem) {
+@media (min-width: 35em) {
   .home {
     background-position: center center;
     background-image: url("../starter-code/assets/home/background-home-tablet.jpg");
   }
 }
 
-@media (min-width: 45rem) {
+@media (min-width: 45em) {
   .home {
     background-image: url("../starter-code/assets/home/background-home-desktop.jpg");
+  }
+}
+
+/* destination */
+.destination {
+  background-image: url("../starter-code/assets/destination/background-destination-mobile.jpg");
+}
+
+@media (min-width: 35em) {
+  .destination {
+    background-position: center center;
+    background-image: url("../starter-code/assets/destination/background-destination-tablet.jpg");
+  }
+}
+
+@media (min-width: 45em) {
+  .destination {
+    background-image: url("../starter-code/assets/destination/background-destination-desktop.jpg");
+  }
+}
+
+/* crew */
+.crew {
+  background-image: url("../starter-code/assets/home/background-crew-mobile.jpg");
+}
+
+@media (min-width: 35em) {
+  .crew {
+    background-position: center center;
+    background-image: url("../starter-code/assets/crew/background-crew-tablet.jpg");
+  }
+}
+
+@media (min-width: 45em) {
+  .crew {
+    background-image: url("../starter-code/assets/crew/background-crew-desktop.jpg");
+  }
+}
+
+/*technology*/
+.technology {
+  background-image: url("../starter-code/assets/home/background-technology-mobile.jpg");
+}
+
+@media (min-width: 35em) {
+  .technology {
+    background-position: center center;
+    background-image: url("../starter-code/assets/technology/background-technology-tablet.jpg");
+  }
+}
+
+@media (min-width: 45em) {
+  .technology {
+    background-image: url("../starter-code/assets/technology/background-technology-desktop.jpg");
   }
 }
 /*# sourceMappingURL=index.css.map */
