--- a/starter-code/index.scss
+++ b/starter-code/index.scss
@@ -13,12 +13,12 @@
 /*--------------------------------------------------------------------------------------------------*/
 
 /*--font sizes---*/
-$fs-900: clamp(5rem, 8vw, 9.375rem);
+$fs-900: unquote("clamp(5rem, 8vw + 1rem, 9.375rem)");
 $fs-800: 6.25rem;
 $fs-700: 3.5rem;
 $fs-600: 2rem;
 $fs-500: 1.75rem;
-$fs-400: 1.125rem;
+$fs-400: 1rem;
 $fs-300: 1rem;
 $fs-200: 0.875rem;
 
@@ -36,6 +36,7 @@ $clr-white: hsl(0, 0%, 100%);
 	$fs-800: 5rem;
 	$fs-700: 2.5rem;
 	$fs-600: 1.5rem;
+	$fs-500: 1.25rem;
 	$fs-400: 1rem;
 }
 
@@ -43,6 +44,7 @@ $clr-white: hsl(0, 0%, 100%);
 	$fs-800: 6.25rem;
 	$fs-700: 3.5rem;
 	$fs-600: 2rem;
+	$fs-500: 1.75rem;
 	$fs-400: 1.125rem;
 }
 /*--------------------------------------------------------------------------------------------------*/
@@ -143,37 +145,6 @@ select {
 	padding-inline: 2em;
 	margin-inline: auto;
 	max-width: 80rem;
-}
-.grid-container {
-	display: grid;
-	text-align: center;
-	place-items: center;
-	padding-inline: 1rem;
-}
-.grid-container * {
-	max-width: 50ch;
-}
-
-@media (min-width: 45em) {
-	.grid-container {
-		text-align: left;
-		column-gap: var(--col-gap, 2rem);
-		grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(
-				2rem,
-				1fr
-			);
-	}
-
-	.grid-container > *:first-child {
-		grid-column: 2;
-	}
-	.grid-container > *:last-child {
-		grid-column: 3;
-	}
-	.grid-container--home {
-		padding-bottom: 5rem;
-		align-items: end;
-	}
 }
 
 .sr-only {
@@ -300,78 +271,73 @@ select {
 	text-decoration: none;
 	place-items: center;
 	z-index: 1;
-}
 
-.largebutton::after {
-	content: "";
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background: hslac($clr-white, 0.15);
-	border-radius: 50%;
-	z-index: -1;
-	opacity: 0;
-	transition: opacity 500ms linear, transform 750ms ease-in-out;
-}
+	&:after {
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background: hslac($clr-white, 0.15);
+		border-radius: 50%;
+		z-index: -1;
+		opacity: 0;
+		transition: opacity 500ms linear, transform 750ms ease-in-out;
+	}
 
-.largebutton:focus::after,
-.largebutton:hover::after {
-	opacity: 1;
-	transform: scale(1.5);
+	&focus::after,
+	&hover::after {
+		opacity: 1;
+		transform: scale(1.5);
+	}
 }
 .logo {
 	margin: 1.5rem clamp(1.5rem, 5vw, 3.5rem);
 }
 
-.primary-header {
-	justify-content: space-between;
-	align-items: center;
-}
 .primarynavigation {
-	--gap: clamp(2rem, 5vw, 3rem);
 	--underline-gap: 2rem;
 	list-style: none;
 	padding: 0;
 	margin: 0;
 	background: hslac($clr-white, 0.1);
 	backdrop-filter: blur(1rem);
-}
-.primarynavigation a {
-	text-decoration: none;
-	text-align: center;
-}
 
-.primarynavigation a > span {
-	margin-right: 0.6em;
-	font-weight: 700;
+	a {
+		text-decoration: none;
+		text-align: center;
+	}
+
+	a > span {
+		margin-right: 0.6em;
+		font-weight: 700;
+	}
+
+	@media (max-width: 35em) {
+		--underline-gap: 0.5rem;
+		flex-direction: column;
+		position: fixed;
+		inset: 0 0 0 30%;
+		list-style: none;
+		z-index: 2;
+		padding: unquote("min(20rem, 10vh)") 2rem;
+		margin: 0;
+		transform: translateX(100%);
+		transition: transform 500ms ease-in-out;
+
+		> .active {
+			border: 0;
+		}
+
+		&[data-visible~="true"] {
+			transform: translateX(0);
+		}
+	}
 }
 
 .mobile-toggler {
 	display: none;
-}
 
-@media (max-width: 35em) {
-	.primarynavigation {
-		--underline-gap: 0.5rem;
-		list-style: none;
-		position: fixed;
-		z-index: 1;
-		inset: 0 0 0 30%;
-		padding: 5rem 2rem;
-		margin: 0;
-		flex-direction: column;
-		transform: translateX(100%);
-		transition: transform 500ms ease-in-out;
-	}
-
-	.primarynavigation[data-visible="true"] {
-		transform: translateX(0);
-	}
-	.primary-navigation.underline-indicators > .active {
-		border: 0;
-	}
-
-	.mobile-toggler {
+	@media (max-width: 35em) {
 		display: block;
 		position: absolute;
 		right: 1rem;
@@ -384,27 +350,21 @@ select {
 		width: 2rem;
 		aspect-ratio: 1;
 		border: 0;
-	}
 
-	.mobile-toggler[aria-expanded="true"] {
-		background-image: url(../starter-code/assets/shared/icon-close.svg);
-		background-repeat: no-repeat;
-	}
-	.mobile-toggler:focus-visible {
-		outline-offset: 5px;
+		&[aria-expanded~="true"] {
+			background-image: url(../starter-code/assets/shared/icon-close.svg);
+			background-repeat: no-repeat;
+		}
+
+		&:focus-visible {
+			outline-offset: 5px;
+		}
 	}
 }
 
-@media (min-width: 35em) {
-	.primarynavigation {
-		padding-inline: clamp(3rem, 7vw, 7rem);
-	}
-}
-
-@media (min-width: 35em) and (max-width: 44.999em) {
-	.primarynavigation a > span {
-		display: none;
-	}
+.primary-header {
+	justify-content: space-between;
+	align-items: center;
 }
 
 @media (min-width: 45em) {
@@ -446,8 +406,12 @@ select {
 
 .underline-indicators > .active,
 .underline-indicators > [aria-selected="true"] {
-	color: hslac($clr-white, 0);
+	color: hslac($clr-white, 1);
 	border-color: hslac($clr-white, 1);
+}
+
+.tab-list {
+	--gap: 2rem;
 }
 
 .dot-indicators > * {
@@ -474,74 +438,125 @@ body {
 	background-size: cover;
 	background-position: bottom center;
 }
-
 .home {
 	background-image: url("../starter-code/assets/home/background-home-mobile.jpg");
-}
 
-@media (min-width: 35em) {
-	.home {
+	@media (min-width: 35em) {
 		background-position: center center;
 		background-image: url("../starter-code/assets/home/background-home-tablet.jpg");
 	}
-}
 
-@media (min-width: 45em) {
-	.home {
+	@media (min-width: 45em) {
 		background-image: url("../starter-code/assets/home/background-home-desktop.jpg");
 	}
-}
 
-/* destination */
-.destination {
-	background-image: url("../starter-code/assets/destination/background-destination-mobile.jpg");
-}
-
-@media (min-width: 35em) {
+	/* destination */
 	.destination {
-		background-position: center center;
-		background-image: url("../starter-code/assets/destination/background-destination-tablet.jpg");
+		background-image: url("../starter-code/assets/destination/background-destination-mobile.jpg");
+
+		@media (min-width: 35em) {
+			background-position: center center;
+			background-image: url("../starter-code/assets/destination/background-destination-tablet.jpg");
+		}
+
+		@media (min-width: 45em) {
+			background-image: url("../starter-code/assets/destination/background-destination-desktop.jpg");
+		}
 	}
-}
 
-@media (min-width: 45em) {
-	.destination {
-		background-image: url("../starter-code/assets/destination/background-destination-desktop.jpg");
-	}
-}
-
-/* crew */
-.crew {
-	background-image: url("../starter-code/assets/home/background-crew-mobile.jpg");
-}
-
-@media (min-width: 35em) {
+	/* crew */
 	.crew {
-		background-position: center center;
-		background-image: url("../starter-code/assets/crew/background-crew-tablet.jpg");
+		background-image: url("../starter-code/assets/home/background-crew-mobile.jpg");
+
+		@media (min-width: 35em) {
+			background-position: center center;
+			background-image: url("../starter-code/assets/crew/background-crew-tablet.jpg");
+		}
+
+		@media (min-width: 45em) {
+			background-image: url("../starter-code/assets/crew/background-crew-desktop.jpg");
+		}
 	}
-}
 
-@media (min-width: 45em) {
-	.crew {
-		background-image: url("../starter-code/assets/crew/background-crew-desktop.jpg");
-	}
-}
-
-/*technology*/
-.technology {
-	background-image: url("../starter-code/assets/home/background-technology-mobile.jpg");
-}
-
-@media (min-width: 35em) {
+	/*technology*/
 	.technology {
-		background-position: center center;
-		background-image: url("../starter-code/assets/technology/background-technology-tablet.jpg");
+		background-image: url("../starter-code/assets/home/background-technology-mobile.jpg");
+
+		@media (min-width: 35em) {
+			background-position: center center;
+			background-image: url("../starter-code/assets/technology/background-technology-tablet.jpg");
+		}
+
+		@media (min-width: 45em) {
+			background-image: url("../starter-code/assets/technology/background-technology-desktop.jpg");
+		}
 	}
 }
 
-@media (min-width: 45em) {
-	.technology {
-		background-image: url("../starter-code/assets/technology/background-technology-desktop.jpg");
+/*------------------------------------------------------------------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------------------LAYOUT------------------------------------*/
+/*--destination layout*/
+.grid-container {
+	text-align: center;
+	justify-items: center;
+	align-items: center;
+	padding-inline: 1rem;
+	padding-bottom: 4rem;
+
+	* {
+		max-width: 50ch;
+	}
+
+	// .destination-meta {
+	// 	flex-direction: column;
+	// 	border-top: 2px solid hslac($clr-white, 0.1);
+	// 	padding-top: 2.5rem;
+	// 	margin-top: 2.5rem;
+	// }
+
+	@media (min-width: 45em) {
+		text-align: left;
+		display: grid;
+		column-gap: var(--column-gap, 2rem);
+		grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(
+				2rem,
+				1fr
+			);
+
+		> :first-child {
+			grid-column: 2;
+		}
+		> :last-child {
+			grid-column: 3;
+		}
+
+		.grid-container--home {
+			padding-bottom: unquote("max(6rem, 20vh)");
+			align-items: end;
+		}
+
+		// .numberedtitles {
+		// 	grid-area: title;
+		// }
+
+		// .grid-container--destination {
+		// 	img {
+		// 		grid-area: image;
+		// 		max-width: 60%;
+		// 	}
+
+		// 	.destination-info {
+		// 		grid-area: content;
+		// 	}
+		// 	.tab-list {
+		// 		grid-area: tabs;
+		// 	}
+		// 	grid-template-areas:
+		// 		"title"
+		// 		"image"
+		// 		"tabs"
+		// 		"content";
+		// }
+		// }
 	}
 }
