--- a/styles/index.css
+++ b/styles/index.css
@@ -35,7 +35,7 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   font-family: "Barlow", sans-serif;
-  font-size: 1.125rem;
+  font-size: 1rem;
   color: white;
   background-color: #0c0e18;
   line-height: 1.5;
@@ -112,42 +112,6 @@ select {
   max-width: 80rem;
 }
 
-.grid-container {
-  display: -ms-grid;
-  display: grid;
-  text-align: center;
-  place-items: center;
-  padding-inline: 1rem;
-}
-
-.grid-container * {
-  max-width: 50ch;
-}
-
-@media (min-width: 45em) {
-  .grid-container {
-    text-align: left;
-    -webkit-column-gap: var(--col-gap, 2rem);
-            column-gap: var(--col-gap, 2rem);
-    -ms-grid-columns: minmax(2rem, 1fr) (minmax(0, 40rem))[2] minmax(2rem, 1fr);
-        grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(2rem, 1fr);
-  }
-  .grid-container > *:first-child {
-    -ms-grid-column: 2;
-    grid-column: 2;
-  }
-  .grid-container > *:last-child {
-    -ms-grid-column: 3;
-    grid-column: 3;
-  }
-  .grid-container--home {
-    padding-bottom: 5rem;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: end;
-  }
-}
-
 .sr-only {
   position: absolute;
   width: 1;
@@ -218,7 +182,7 @@ select {
 }
 
 .fs-900 {
-  font-size: clamp(5rem, 8vw, 9.375rem);
+  font-size: clamp(5rem, 8vw + 1rem, 9.375rem);
 }
 
 .fs-800 {
@@ -238,7 +202,7 @@ select {
 }
 
 .fs-400 {
-  font-size: 1.125rem;
+  font-size: 1rem;
 }
 
 .fs-300 {
@@ -289,7 +253,7 @@ select {
   z-index: 1;
 }
 
-.largebutton::after {
+.largebutton:after {
   content: "";
   position: absolute;
   width: 100%;
@@ -304,8 +268,7 @@ select {
   transition: opacity 500ms linear, transform 750ms ease-in-out, -webkit-transform 750ms ease-in-out;
 }
 
-.largebutton:focus::after,
-.largebutton:hover::after {
+.largebuttonfocus::after, .largebuttonhover::after {
   opacity: 1;
   -webkit-transform: scale(1.5);
           transform: scale(1.5);
@@ -315,17 +278,7 @@ select {
   margin: 1.5rem clamp(1.5rem, 5vw, 3.5rem);
 }
 
-.primary-header {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 .primarynavigation {
-  --gap: clamp(2rem, 5vw, 3rem);
   --underline-gap: 2rem;
   list-style: none;
   padding: 0;
@@ -345,23 +298,19 @@ select {
   font-weight: 700;
 }
 
-.mobile-toggler {
-  display: none;
-}
-
 @media (max-width: 35em) {
   .primarynavigation {
     --underline-gap: 0.5rem;
-    list-style: none;
-    position: fixed;
-    z-index: 1;
-    inset: 0 0 0 30%;
-    padding: 5rem 2rem;
-    margin: 0;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    position: fixed;
+    inset: 0 0 0 30%;
+    list-style: none;
+    z-index: 2;
+    padding: min(20rem, 10vh) 2rem;
+    margin: 0;
     -webkit-transform: translateX(100%);
             transform: translateX(100%);
     -webkit-transition: -webkit-transform 500ms ease-in-out;
@@ -369,13 +318,20 @@ select {
     transition: transform 500ms ease-in-out;
     transition: transform 500ms ease-in-out, -webkit-transform 500ms ease-in-out;
   }
-  .primarynavigation[data-visible="true"] {
+  .primarynavigation > .active {
+    border: 0;
+  }
+  .primarynavigation[data-visible~="true"] {
     -webkit-transform: translateX(0);
             transform: translateX(0);
   }
-  .primary-navigation.underline-indicators > .active {
-    border: 0;
-  }
+}
+
+.mobile-toggler {
+  display: none;
+}
+
+@media (max-width: 35em) {
   .mobile-toggler {
     display: block;
     position: absolute;
@@ -390,7 +346,7 @@ select {
     aspect-ratio: 1;
     border: 0;
   }
-  .mobile-toggler[aria-expanded="true"] {
+  .mobile-toggler[aria-expanded~="true"] {
     background-image: url(../starter-code/assets/shared/icon-close.svg);
     background-repeat: no-repeat;
   }
@@ -399,16 +355,13 @@ select {
   }
 }
 
-@media (min-width: 35em) {
-  .primarynavigation {
-    padding-inline: clamp(3rem, 7vw, 7rem);
-  }
-}
-
-@media (min-width: 35em) and (max-width: 44.999em) {
-  .primarynavigation a > span {
-    display: none;
-  }
+.primary-header {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media (min-width: 45em) {
@@ -457,8 +410,12 @@ select {
 
 .underline-indicators > .active,
 .underline-indicators > [aria-selected="true"] {
-  color: rgba(255, 255, 255, 0);
+  color: white;
   border-color: white;
+}
+
+.tab-list {
+  --gap: 2rem;
 }
 
 .dot-indicators > * {
@@ -488,6 +445,9 @@ body {
 
 .home {
   background-image: url("../starter-code/assets/home/background-home-mobile.jpg");
+  /* destination */
+  /* crew */
+  /*technology*/
 }
 
 @media (min-width: 35em) {
@@ -503,57 +463,97 @@ body {
   }
 }
 
-/* destination */
-.destination {
+.home .destination {
   background-image: url("../starter-code/assets/destination/background-destination-mobile.jpg");
 }
 
 @media (min-width: 35em) {
-  .destination {
+  .home .destination {
     background-position: center center;
     background-image: url("../starter-code/assets/destination/background-destination-tablet.jpg");
   }
 }
 
 @media (min-width: 45em) {
-  .destination {
+  .home .destination {
     background-image: url("../starter-code/assets/destination/background-destination-desktop.jpg");
   }
 }
 
-/* crew */
-.crew {
+.home .crew {
   background-image: url("../starter-code/assets/home/background-crew-mobile.jpg");
 }
 
 @media (min-width: 35em) {
-  .crew {
+  .home .crew {
     background-position: center center;
     background-image: url("../starter-code/assets/crew/background-crew-tablet.jpg");
   }
 }
 
 @media (min-width: 45em) {
-  .crew {
+  .home .crew {
     background-image: url("../starter-code/assets/crew/background-crew-desktop.jpg");
   }
 }
 
-/*technology*/
-.technology {
+.home .technology {
   background-image: url("../starter-code/assets/home/background-technology-mobile.jpg");
 }
 
 @media (min-width: 35em) {
-  .technology {
+  .home .technology {
     background-position: center center;
     background-image: url("../starter-code/assets/technology/background-technology-tablet.jpg");
   }
 }
 
 @media (min-width: 45em) {
-  .technology {
+  .home .technology {
     background-image: url("../starter-code/assets/technology/background-technology-desktop.jpg");
+  }
+}
+
+/*------------------------------------------------------------------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------------------LAYOUT------------------------------------*/
+/*--destination layout*/
+.grid-container {
+  text-align: center;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-inline: 1rem;
+  padding-bottom: 4rem;
+}
+
+.grid-container * {
+  max-width: 50ch;
+}
+
+@media (min-width: 45em) {
+  .grid-container {
+    text-align: left;
+    display: -ms-grid;
+    display: grid;
+    -webkit-column-gap: var(--column-gap, 2rem);
+            column-gap: var(--column-gap, 2rem);
+    -ms-grid-columns: minmax(2rem, 1fr) (minmax(0, 40rem))[2] minmax(2rem, 1fr);
+        grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(2rem, 1fr);
+  }
+  .grid-container > :first-child {
+    -ms-grid-column: 2;
+    grid-column: 2;
+  }
+  .grid-container > :last-child {
+    -ms-grid-column: 3;
+    grid-column: 3;
+  }
+  .grid-container .grid-container--home {
+    padding-bottom: max(6rem, 20vh);
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: end;
   }
 }
 /*# sourceMappingURL=index.css.map */
